# klep2tron

./: .cursorrules  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  klep2tron.desktop  settings.json
assets/shaders/: starry_sky.wgsl
assets/vfx/: presets.ron
crates/admin_web/: Cargo.toml
crates/client/: Cargo.toml
crates/client_core/: Cargo.toml
crates/client_core/src/: actor_editor.rs  benchmark.rs  history.rs  input.rs  lib.rs  perf.rs  transition.rs  world.rs
crates/client_core/src/actor_editor/: mod.rs  navigation.rs  systems_logic.rs  ui_inspector.rs  ui_project.rs  ui_root.rs  vfx_assets.rs  widgets.rs
crates/client_core/src/actor_editor/geometry/: capper.rs  contour_calculator.rs  mod.rs  raycast.rs  slicer.rs
crates/client_core/src/actor_editor/systems/: export.rs  gizmos.rs  input.rs  inspection.rs  load.rs  mod.rs  normalization.rs  optimization.rs  picking.rs  preview_contours.rs  save.rs  scaling.rs  slicing.rs  socket_metadata.rs  sync.rs  ui_logic.rs  undo_redo.rs  vfx_preview.rs  vfx_spawner.rs
crates/client_core/src/actor_editor/systems/gizmos/: interaction.rs  mod.rs  picking.rs  spawning.rs  visuals.rs
crates/client_core/src/actor_editor/ui/: mod.rs
crates/client_core/src/actor_editor/ui/inspector/: materials.rs  mod.rs  optimization.rs  parts.rs  scaling.rs  sockets.rs  systems.rs  types.rs  vfx.rs
crates/client_core/src/actor_editor/ui/layout/: camera.rs  gizmo_legend.rs  mod.rs
crates/client_core/src/actor_editor/widgets/: color_picker.rs  common.rs  mod.rs  overlays.rs  panels.rs  sliders.rs  text_input.rs
crates/client_core/src/assets/: mod.rs
crates/client_core/src/rendering/: mod.rs
crates/client_core/src/settings/: auto_detect.rs  mod.rs
crates/client_core/src/ui/: help.rs  hud.rs  menu.rs  mod.rs
crates/client_core/src/ui/menu/: mod.rs  types.rs  ui.rs
crates/client_core/src/ui/menu/systems/: actions.rs  input.rs  mod.rs  visuals.rs
crates/client_core/src/world/: mod.rs  sky.rs
crates/client_web/: Cargo.toml  Trunk.toml  index.html
crates/client_web/src/: lib.rs  main.rs
crates/editor_client/: Cargo.toml  build.rs  settings.json
crates/editor_client_web/: Cargo.toml  Trunk.toml  index.html
crates/editor_client_web/src/: main.rs
crates/server/: Cargo.toml
crates/shared/: Cargo.toml
docs/: AI_WORKFLOW.md  AI_WORKFLOW_UA.md  Actor_Storage_Format.md  EDITOR_GUIDE.md  ENGINEERING_PROTOCOL.md  ENGINEERING_PROTOCOL_UA.md  PRODUCT_PROTOCOL.md  PRODUCT_PROTOCOL_UA.md  PROJECT_MAP.md  ROOM_RENDERING.md  SOLID_BEVY.md  perf_dashboard.html
docs/design/: GDD.md
scratch/: add_normalization.py  convert_icon.rs旋  fix_gltf_labels.py  update_systems_final.py
(+58 files in other folders)
