[workspace]
members = [
    "crates/editor_client",
    "crates/server",
    "crates/shared",
    "crates/admin_web",
    "crates/editor_client_web",
    "crates/client_core",
    "crates/client",
    "crates/client_web",
]
resolver = "2"

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
panic = 'abort'
