[package]
name = "client_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["default"] }
bevy_obj = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
image = "0.25"
winit = "0.30"
wgpu = "0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window", "Storage"] }
