[package]
name = "client_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["default", "wayland"] }
bevy_obj = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
image = "0.25"
winit = "0.30"
wgpu = "0.20"
bevy_framepace = "0.17"
bevy_panorbit_camera = "0.20"
bevy_mod_picking = { version = "0.20", features = ["selection", "highlight", "backend_raycast", "backend_bevy_ui"] }
bevy_hanabi = "0.13"
rfd = "0.14"
rayon = "1.10"
ron = "0.12.1"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Storage", "Window", "Storage"] }
