[package]
name = "client_web"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["webgl2"] }
bevy_obj = "0.14"
client_core = { path = "../client_core" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["js", "v4"] }


[lib]
crate-type = ["cdylib", "rlib"]
